log
Thu 24 Aug 2023 08:04:07 PM UTC: 
 list.c | 42 +++++++++++++++++++++++++++++++++---------
 1 file changed, 33 insertions(+), 9 deletions(-)
 tests:  0|0
bd17976
Thu 24 Aug 2023 08:10:06 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
3eda306
Thu 24 Aug 2023 08:11:57 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
7d5e4d0
Thu 24 Aug 2023 08:16:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f6c5921
Thu 24 Aug 2023 08:17:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fed5d5b
Thu 24 Aug 2023 08:20:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7907e64
Thu 24 Aug 2023 08:26:00 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
bcea5b3
Thu 24 Aug 2023 08:26:47 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
faf0b54
Thu 24 Aug 2023 08:29:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c71cb6c
Thu 24 Aug 2023 08:30:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bfd278b
Thu 24 Aug 2023 08:31:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c20d013
Thu 24 Aug 2023 08:32:17 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
fa5ce4a
Thu 24 Aug 2023 08:32:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
458e19f
Thu 24 Aug 2023 08:33:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
616fb27
Thu 24 Aug 2023 08:34:20 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
36e49f7
Thu 24 Aug 2023 08:36:48 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b5447b1
Thu 24 Aug 2023 08:37:48 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘nextList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:107:8: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  107 |   void cleanList(List * list) {
      |        ^~~~~~~~~
list.c:93:9: error: ‘popBack’ defined but not used [-Werror=unused-function]
   93 |   void *popBack(List * list) {
      |         ^~~~~~~
list.c:76:8: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   76 |   void pushBack(List * list, void *data) {
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d2aff0b
Thu 24 Aug 2023 08:38:45 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
0737725
Thu 24 Aug 2023 08:40:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a0dd915
Thu 24 Aug 2023 08:43:03 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
c881b47
Thu 24 Aug 2023 08:44:16 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
dd909b4
Thu 24 Aug 2023 08:44:59 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
ff99503
Thu 24 Aug 2023 08:48:09 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9a856b1
Thu 24 Aug 2023 08:51:55 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
48c45c8
Thu 24 Aug 2023 08:54:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
92658e8
Thu 24 Aug 2023 08:57:56 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:70:10: error: ‘response’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |   return response;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f5fb6b0
Thu 24 Aug 2023 08:58:27 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:70:10: error: ‘response1’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |   return response1;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eba14e2
Thu 24 Aug 2023 09:00:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d1a05b8
Fri 25 Aug 2023 04:53:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7f09e3c
Fri 25 Aug 2023 04:54:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9764fad
Fri 25 Aug 2023 04:57:22 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
bdb61d1
Fri 25 Aug 2023 04:57:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2ac6fca
Fri 25 Aug 2023 04:58:51 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
aababdd
Fri 25 Aug 2023 05:04:29 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
7f87332
Fri 25 Aug 2023 05:05:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5708293
